[package]
name = "axum_csv_to_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features=["rt-multi-thread", "macros"]}
axum = "0.5.6"
csv = "1.1.6"
# csv = {path = "../rust-csv", version = "1.1.6"}
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
