[package]
name = "tokio_logdna-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features=["rt-multi-thread", "macros"]}
axum = "0.5.6"
csv = "1.1.6"
# csv = {path = "../rust-csv", version = "1.1.6"}
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

# logdna-client = {path = "../logdna-rust", version = "0.7.0"}
# until logdna-client gets published on crates.io, use it from GIT:
logdna-client = {git = "https://github.com/logdna/logdna-rust"}

